prevent svg overflow

--- a/themes/clear/assets/css/theme.css
+++ b/themes/clear/assets/css/theme.css
@@ -554,3 +554,7 @@ p:first-child { margin-top: 0 !important; }
 .footerbox {
     clear: both;
 }
+
+object.music-score {
+    width: 100%;
+}
